# gentletask

./: .gitignore  CHANGELOG.md  LICENSE  README.md  examples.ipynb  gentletask.py  pyproject.toml  spec.md  test_gentletask.py
.github/workflows/: deploy.yml  test.yml
